fix(header): fix header z-index

--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ header{
     width: 100%;
     top: 0;
     left: 0;
+    z-index: 999;
     /* opacity: .5; debug */
 }
 
